--- a/index.html
+++ b/index.html
@@ -11,3 +11,9 @@
 <p>
     <strong>Looking for an easy cake recipe? Whether you're looking for ideas to make a birthday cake or just procrastinating at home, look no further! We have listed easy recipes for you to follow from carrot cake to easy cheesecake recipe, read on to find out more... </strong>
 </p>
+
+    <img alt="Chocolate Cake" src="https://upload.wikimedia.org/wikipedia/commons/d/d8/Coulant_10000000041662_000639_%2815823743875%29.jpg">
+
+<p>Click on the link to follow our instagram page for weekly baking inspiration!</p>
+<a>href="https://www.instagram.com/">Instagram</a>
+</body>
