--- a/index.html
+++ b/index.html
@@ -15,5 +15,5 @@
     <img alt="Chocolate Cake" src="https://upload.wikimedia.org/wikipedia/commons/d/d8/Coulant_10000000041662_000639_%2815823743875%29.jpg">
 
 <p>Click on the link to follow our instagram page for weekly baking inspiration!</p>
-<a>href="https://www.instagram.com/">Instagram</a>
+<a href="https://www.instagram.com/">Instagram</a>
 </body>
