--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 
     <img alt="Chocolate Cake" src="https://upload.wikimedia.org/wikipedia/commons/d/d8/Coulant_10000000041662_000639_%2815823743875%29.jpg">
 
-<p>Click on the link to follow our instagram page for weekly baking inspiration!</p>
+<p>Click on the link to follow our instagram page!</p>
 <a>href="https://www.instagram.com/">Instagram</a>
 </body>
+
+<p>Subscribe to our newsletter for weekly inspiration</p>
+<input type="email">
+<input type="submit">
+<input type="email" placeholder="Your email">
