--- a/index.html
+++ b/index.html
@@ -17,3 +17,4 @@
 <p>Click on the link to follow our instagram page for weekly baking inspiration!</p>
 <a href="https://www.instagram.com/">Instagram</a>
 </body>
+<input type="email" placeholder="Your email"> 
