--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
+<!DOCTYPE html>
+<head>
+  <title>Easy Bake Cake</title>
+</head>
 <body>
-<!-- <style>
-  div {
-    background-color: blue;
-  }
-</style> -->
 <div class="text-center">
     <h1>Easy Bake Cake</h1>
 </div>
-
 <p>
     <strong>Looking for an easy cake recipe? Whether you're looking for ideas to make a birthday cake or just procrastinating at home, look no further! We have listed easy recipes for you to follow from carrot cake to easy cheesecake recipe, read on to find out more... </strong>
 </p>
