--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<head>
+  <title>Easy Bake Cake</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+<div class="text-center">
 <head>
   <link rel="stylesheet" href="style.css">
 </head>
