--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
   <title>Easy Bake Cake</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
 <div class="text-center">
@@ -21,6 +22,8 @@
 <p>Click on the link to follow our instagram page!</p>
 <a href="https://www.instagram.com/">Instagram</a>
 </body>
+
+<button type="button" class="btn btn-primary">Test Button</button>
 
 <p>Subscribe to recieve our weekly newsletter for baking inspiration</p>
 <input type="email">
