--- a/index.html
+++ b/index.html
@@ -18,7 +18,16 @@
 </p>
 
     <img alt="Chocolate Cake" src="https://upload.wikimedia.org/wikipedia/commons/d/d8/Coulant_10000000041662_000639_%2815823743875%29.jpg">
-
+<div>
+  <p>Cake Recipes:</p>
+    <ul>
+      <li>Carrot Cake</li>
+      <li>Chocolate Fudge</li>
+      <li>Caramel Cheesecake</li>
+      <li>Red Velvet</li>
+      <li>Victoria Sponge</li>
+    </ul>
+</div>
 <p>Click on the link to follow our instagram page!</p>
 <a href="https://www.instagram.com/">Instagram</a>
 </body>
