--- a/index.html
+++ b/index.html
@@ -18,21 +18,20 @@
 </p>
 
     <img alt="Chocolate Cake" src="https://upload.wikimedia.org/wikipedia/commons/d/d8/Coulant_10000000041662_000639_%2815823743875%29.jpg">
+
 <div>
   <p>Cake Recipes:</p>
-    <ul>
-      <li>Carrot Cake</li>
-      <li>Chocolate Fudge</li>
-      <li>Caramel Cheesecake</li>
-      <li>Red Velvet</li>
-      <li>Victoria Sponge</li>
-    </ul>
+    <button type="button" class="btn btn-primary">Carrot Cake</button>
+    <button type="button" class="btn btn-primary">Chocolate Fudge</button>
+    <button type="button" class="btn btn-primary">Caramel Cheesecake</button>
+    <button type="button" class="btn btn-primary">Red Velvet</button>
+    <button type="button" class="btn btn-primary">Victoria Sponge</button>
 </div>
+
+
 <p>Click on the link to follow our instagram page!</p>
 <a href="https://www.instagram.com/">Instagram</a>
 </body>
-
-<button type="button" class="btn btn-primary">Test Button</button>
 
 <p>Subscribe to recieve our weekly newsletter for baking inspiration</p>
 <input type="email">
