--- a/carrotcake.html
+++ b/carrotcake.html
@@ -1,7 +1,36 @@
-CARROT CAKE PAGE
 
 <head>
   <link rel="stylesheet" href="style.css">
 </head>
 
 <h1>CARROT CAKE</h1>
+
+<div>
+  <p>Ingredients</p>
+    <ul>
+      <li>For the carrot cake</li>
+      <li>450ml/16fl oz vegetable oil</li>
+      <li>400g/14oz plain flour</li>
+      <li>2 tsp bicarbonate of soda</li>
+      <li>550g/1lb 4oz sugar</li>
+      <li>5 free-range eggs</li>
+      <li>½ tsp salt</li>
+      <li>2½ tsp ground cinnamon</li>
+      <li>525g/1lb 3oz carrots, grated</li>
+      <li>150g/5½oz shelled walnuts, chopped</li>
+      <li>For the icing</li>
+      <li>200g/7oz cream cheese</li>
+      <li>150g/5½oz caster sugar</li>
+      <li>100g/3½oz butter, softened</li>
+    </ul>
+</div>
+
+<div>
+  <p>Method</p>
+    <ol>
+      <li>For the carrot cake, preheat the oven to 180C/160C Fan/Gas 4. Grease and line a 26cm/10in springform cake tin.</li>
+      <li>Mix all of the ingredients for the carrot cake, except the carrots and walnuts, together in a bowl until well combined. Stir in the carrots and walnuts.</li>
+      <li>Spoon the mixture into the cake tin and bake for 1 hour 15 minutes, or until a skewer inserted into the middle comes out clean. Remove the cake from the oven and set aside to cool for 10 minutes, then carefully remove the cake from the tin and set aside to cool completely on a cooling rack.</li>
+      <li>Meanwhile, for the icing, beat the cream cheese, caster sugar and butter together in a bowl until fluffy. Spread the icing over the top of the cake with a palette knife.</li>
+    </ol>
+</div>
