--- a/carrotcake.html
+++ b/carrotcake.html
@@ -1,28 +1,43 @@
-
 <head>
+  <title>Carrot Cake</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Rock+Salt" rel="stylesheet">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
-<h1>CARROT CAKE</h1>
+<body>
 
 <div>
-  <p>Ingredients</p>
-    <ul>
-      <li>For the carrot cake</li>
-      <li>450ml/16fl oz vegetable oil</li>
-      <li>400g/14oz plain flour</li>
-      <li>2 tsp bicarbonate of soda</li>
-      <li>550g/1lb 4oz sugar</li>
-      <li>5 free-range eggs</li>
-      <li>½ tsp salt</li>
-      <li>2½ tsp ground cinnamon</li>
-      <li>525g/1lb 3oz carrots, grated</li>
-      <li>150g/5½oz shelled walnuts, chopped</li>
-      <li>For the icing</li>
-      <li>200g/7oz cream cheese</li>
-      <li>150g/5½oz caster sugar</li>
-      <li>100g/3½oz butter, softened</li>
-    </ul>
+<h1>CARROT CAKE</h1>
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm">
+      <div>
+        <p>Ingredients</p>
+          <ul>
+            <li>For the carrot cake</li>
+            <li>450ml/16fl oz vegetable oil</li>
+            <li>400g/14oz plain flour</li>
+            <li>2 tsp bicarbonate of soda</li>
+            <li>550g/1lb 4oz sugar</li>
+            <li>5 free-range eggs</li>
+            <li>½ tsp salt</li>
+            <li>2½ tsp ground cinnamon</li>
+            <li>525g/1lb 3oz carrots, grated</li>
+            <li>150g/5½oz shelled walnuts, chopped</li>
+            <li>For the icing</li>
+            <li>200g/7oz cream cheese</li>
+            <li>150g/5½oz caster sugar</li>
+            <li>100g/3½oz butter, softened</li>
+          </ul>
+      </div>
+    </div>
+    <div class="col-sm">
+      <img alt="Carrot Cake" src="Carrot-Cake-img.jpg">
+    </div>
+  </div>
 </div>
 
 <div>
@@ -34,3 +49,4 @@
       <li>Meanwhile, for the icing, beat the cream cheese, caster sugar and butter together in a bowl until fluffy. Spread the icing over the top of the cake with a palette knife.</li>
     </ol>
 </div>
+</body>
