padding, button and text changes

--- a/index.html
+++ b/index.html
@@ -18,14 +18,15 @@
 <div class="text-center">
     <h1>Easy Bake Cake</h1>
 </div>
-<p>
-    <strong>Looking for an easy cake recipe? Whether you're looking for ideas to make a birthday cake or just procrastinating at home, look no further! We have listed easy recipes for you to follow from carrot cake to easy cheesecake recipe, read on to find out more... </strong>
+<p id='intro'>
+    <strong>Looking for an easy cake recipe? Whether you're looking for ideas to make a birthday cake or just procrastinating at home, look no further! We have loads of easy recipes for you to try, from classic carrot cake to luxurious cheesecake- read on to find out more... </strong>
 </p>
+
 
     <img alt="Chocolate Cake" src="https://upload.wikimedia.org/wikipedia/commons/d/d8/Coulant_10000000041662_000639_%2815823743875%29.jpg">
 
 <div>
-  <p>Cake Recipes:</p>
+  <p> <strong> Cake Recipes:</p>
     <a href="carrotcake.html"><button type="button" class="btn btn-primary">Carrot Cake</button></a>
     <button type="button" class="btn btn-primary">Chocolate Fudge</button>
     <button type="button" class="btn btn-primary">Caramel Cheesecake</button>
@@ -38,6 +39,8 @@
 <a href="https://www.instagram.com/">Instagram</a>
 </body>
 
+<div id='email'>
 <p>Subscribe to recieve our weekly newsletter for baking inspiration</p>
 <input type ="email" placeholder="Your email">
 <input type="submit" id="submit">
+</div>
