--- a/carrotcake.html
+++ b/carrotcake.html
@@ -7,15 +7,16 @@
 
 <body>
 
+
 <div>
-<h1>CARROT CAKE</h1>
+<h1 id='CC'>CARROT CAKE</h1>
 </div>
 
 <div class="container">
   <div class="row">
     <div class="col-sm">
       <div>
-        <p>Ingredients</p>
+        <p class='CCheads'>Ingredients</p>
           <ul>
             <li>For the carrot cake</li>
             <li>450ml/16fl oz vegetable oil</li>
@@ -41,12 +42,17 @@
 </div>
 
 <div>
-  <p>Method</p>
-    <ol>
+  <p class='CCheads'>Method</p>
+    <ol id='method'>
       <li>For the carrot cake, preheat the oven to 180C/160C Fan/Gas 4. Grease and line a 26cm/10in springform cake tin.</li>
       <li>Mix all of the ingredients for the carrot cake, except the carrots and walnuts, together in a bowl until well combined. Stir in the carrots and walnuts.</li>
       <li>Spoon the mixture into the cake tin and bake for 1 hour 15 minutes, or until a skewer inserted into the middle comes out clean. Remove the cake from the oven and set aside to cool for 10 minutes, then carefully remove the cake from the tin and set aside to cool completely on a cooling rack.</li>
       <li>Meanwhile, for the icing, beat the cream cheese, caster sugar and butter together in a bowl until fluffy. Spread the icing over the top of the cake with a palette knife.</li>
     </ol>
 </div>
+
+<div id='home'>
+<a href="index.html"><button type="button" class="btn btn-primary">Home</button></a>
+</div>
+
 </body>
