--- a/index.html
+++ b/index.html
@@ -22,8 +22,24 @@
     <strong>Looking for an easy cake recipe? Whether you're looking for ideas to make a birthday cake or just procrastinating at home, look no further! We have loads of easy recipes for you to try, from classic carrot cake to luxurious cheesecake- read on to find out more... </strong>
 </p>
 
+<div id="carousel" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100 h-100" src="https://upload.wikimedia.org/wikipedia/commons/d/d8/Coulant_10000000041662_000639_%2815823743875%29.jpg" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100 h-100" src="Carrot-Cake-img.jpg" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100 h-100" src="vic-img.jpg" alt="Third slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100 h-100" src="cheesecake-img.webp" alt="Fourth slide">
+    </div>
+  </div>
+</div>
 
-    <img alt="Chocolate Cake" src="https://upload.wikimedia.org/wikipedia/commons/d/d8/Coulant_10000000041662_000639_%2815823743875%29.jpg">
+
 
 <div>
   <p> <strong> Cake Recipes:</p>
