--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <img class="d-block w-100 h-100" src="vic-img.jpg" alt="Third slide">
     </div>
     <div class="carousel-item" data-interval='2000'>
-      <img class="d-block w-100 h-100" src="cheesecake-img.webp" alt="Fourth slide">
+      <img class="d-block w-100 h-100" src="cheesecake.jpeg" alt="Fourth slide">
     </div>
   </div>
 </div>
