--- a/carrotcake.html
+++ b/carrotcake.html
@@ -36,7 +36,7 @@
       </div>
     </div>
     <div class="col-sm">
-      <img id='CCimg'  alt="Carrot Cake" src="Carrot-Cake-img.jpg">
+      <img id='CCimg' class="img-fluid" alt="Carrot Cake" src="Carrot-Cake-img.jpg">
     </div>
   </div>
 </div>
