--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
 </div>
 
 
-<p>Click on the link to follow our instagram page!</p>
-<a href="https://www.instagram.com/">Instagram</a>
+<p>Click on the link to follow our <a href="https://www.instagram.com/">Instagram</a> page!</p>
 </body>
 
 <div id='email'>
