--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <button type="button" class="btn btn-primary">Victoria Sponge</button>
 </div>
 
-
+<div id='link' 
 <p>Click on the link to follow our <a href="https://www.instagram.com/">Instagram</a> page!</p>
 </body>
 
